FocusRing/Views: Fix updating existing focus rings with new colors.

Updating an existing focus ring with a new color or corner radius regressed in
r550935. This patch fixes it.

Bug: 833798
Change-Id: I4896b10ce3a27f5e760f57fa14908e22b471acb1
Reviewed-on: https://chromium-review.googlesource.com/1015455
Reviewed-by: Michael Wasserman <msw@chromium.org>
Commit-Queue: Patti <patricialor@chromium.org>
Cr-Commit-Position: refs/heads/master@{#551891}
Former-commit-id: 31f04533c181c67966c6a4138a54f8cede01bc49